--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -14,9 +14,16 @@
   <!-- include dependencies here -->
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script> 
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/1.1.0/svg.min.js"></script>
+  <!-- // <script type="text/javascript" src="./../lib/jquery.connectingLine.js"></script> -->
 
   <!-- include source files here... -->
+  <script src="./../js/helper.js"></script>
+  <script src="./../js/bubbleView.js"></script>
+  <script src="./../js/bubble.js"></script>
+  <script src="./../js/connectionView.js"></script>
   <script src="./../js/board.js"></script>
+  
 
 
   <!-- include spec files here... -->
