Endless musical loop to infinity

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   <script src="js/title.js"></script>
 </head>
 <body>
-
  <script src="js/music.js"></script>
- <audio id='Ethereal' src='sound/Ethereal.mp3'></audio>
+ <audio id="Ethereal"preload>
+ <source src="sound/Ethereal.mp3" type="audio/mp3"/> 
+</audio>
+
 
 <script>
   window.fbAsyncInit = function() {
