--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Sphere</title>
   <link rel="stylesheet" type="text/css" href="css/splash.css">
+   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 
@@ -15,6 +16,7 @@
   <script src="js/splashMain.js"></script>
 
 </head>
+
 <body>
   <script src="/js/sound.js"></script>
   <script src="/js/stopMusic.js"></script>
@@ -28,9 +30,7 @@
       <span class="navClosed"><i>show menu</i></span>
     </a>
     <a id="boardLink" class="image1" title="Item 1">FB</a>
-    <!-- <a href="#" class="image2" title="Item 2">Item 2</a>
-    <a href="#" class="image3" title="Item 3">Item 3</a>
-    <a href="#" class="image4" title="Item 3">Item 4</a> -->
+
   </nav>
 
   <div class="os-phrases" id="os-phrases">
@@ -40,15 +40,11 @@
     <h2>survive</h2>
     <h2>I N K L I N G</h2>
   </div>
-  <div>
+
+
+  <footer class="footer">
     <h1 class="logoTitle">INKLING<span style="color:red">.</span></h1>
-    <img class="puzzle" src="https://cdn3.iconfinder.com/data/icons/brain-games/1042/Puzzle-grey.png" width="40cm" height="40cm">
-  </div>
-
-  <div>
-    <p class="copyright">&copy; 2015 inkling.space<p>
-  </div>
-
-
+    <img class="puzzle" src="https://cdn3.iconfinder.com/data/icons/brain-games/1042/Puzzle-grey.png" width="30cm" height="30cm">
+  </footer>
 </body>
 </html>
