--- a/index.html
+++ b/index.html
@@ -20,29 +20,44 @@
 <body>
   <script src="/js/sound.js"></script>
   <audio id='Drone' src='sound/Drone.mp3'></audio>
-  <button class='stopButton' type='button'>Pause Music</button>
-  <button class='playButton' type='button'>Play Music</button>
+ <!--  <button class='stopButton' type='button'>Pause Music</button> -->
+<!--   <button class='playButton' type='button'>Play Music</button> -->
+
+  <div class="stopButton"><img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/simple-red-square-icons-media/129107-simple-red-square-icon-media-a-media27-pause-sign.png" alt="stopButton" height="50cm" width="50cm">
+  </div>
+
+
+  <div class="playButton"><img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/simple-red-square-icons-media/129102-simple-red-square-icon-media-a-media22-arrow-forward1.png" alt="playButton" height="50cm" width="50cm">
+  </div>
+
+
 
   <nav>
     <a href="" id="menuToggle" title="show menu">
       <span class="navClosed"><i>show menu</i></span>
     </a>
     <a id="boardLink" class="image1" title="Item 1">FB</a>
-
+    <!-- <a href="#" class="image2" title="Item 2">Item 2</a>
+    <a href="#" class="image3" title="Item 3">Item 3</a>
+    <a href="#" class="image4" title="Item 3">Item 4</a> -->
   </nav>
 
   <div class="os-phrases" id="os-phrases">
     <h2>Sometimes it's better</h2>
     <h2>to create</h2>
     <h2>in order to</h2>
-    <h2>survive</h2>
+    <h2>survive .</h2>
     <h2>I N K L I N G</h2>
+  </div>
+  <div>
+    <h1 class="logoTitle">INKLING<span style="color:red">.</span></h1>
+    <img class="puzzle" src="https://cdn3.iconfinder.com/data/icons/brain-games/1042/Puzzle-grey.png" width="50cm" height="50cm">
+  </div>
+
+  <div>
+    <p class="copyright">&copy; 2015 inkling.space<p>
   </div>
 
 
-  <footer class="footer">
-    <h1 class="logoTitle">INKLING<span style="color:red">.</span></h1>
-    <img class="puzzle" src="https://cdn3.iconfinder.com/data/icons/brain-games/1042/Puzzle-grey.png" width="30cm" height="30cm">
-  </footer>
 </body>
 </html>
